--- a/style.css
+++ b/style.css
@@ -7,5 +7,5 @@ p{
 	margin: 30px;
   font-family: 'Trebuchet MS', Helvetica, sans-serif;
   background-image: url("http://il2.picdn.net/shutterstock/videos/16485517/thumb/1.jpg");
-	
+	background-size: cover;
 }
