--- a/style.css
+++ b/style.css
@@ -2,10 +2,14 @@ p{
   color: red;
 }
 
-.hero {
+body {
 	padding: 250px 0;
 	margin: 30px;
   font-family: 'Trebuchet MS', Helvetica, sans-serif;
   background-image: url("http://il2.picdn.net/shutterstock/videos/16485517/thumb/1.jpg");
 	background-size: cover;
+	height: 100%;
+	text-align: left;
+	width: 100%;
+	
 }
